--- a/faqandabout.html
+++ b/faqandabout.html
@@ -122,7 +122,7 @@ function closeNav() {
         </tr>
         <tr>
             <td><img src="images/nk.jpg" class="nk"></td>
-            <td></td>
+            <td>this is me</td>
         </tr>
 		<tr>
             <td><img src="images/rangaa.jpg" class="ranga"></td>
