--- a/faqandabout.html
+++ b/faqandabout.html
@@ -126,14 +126,7 @@ function closeNav() {
         </tr>
 		<tr>
             <td><img src="images/rangaa.jpg" class="ranga"></td>
-            <td>Hi! My Name is Ranga. 
-I was born in India and moved to Canada in the summer of 2005. 
-It is funny to say "Summer" because when I moved to Canada, the "Summer" was a crucial and most waited season because of the extreme cold weather for almost nine months.
-I joined SAIT to complete my education which was left behind in India.
-Although I am getting back to education after a very long gap, I have been surviving well and getting adjusted to the Canadian education system.
-I enjoy coding just the front end part, but of all, my best interest has been learning Linux, Powershell, and Python streaming towards automation.
-I have certainly made some great friends at SAIT. 
-I am people-oriented, and I believe the best way to learn is from people, and SAIT is definitely the right place.</td>
+            <td>Hi! My Name is Ranga. I was born in India and moved to Canada in the summer of 2005. It is funny to say "Summer" because when I moved to Canada, the "Summer" was a crucial and most waited season because of the extreme cold weather for almost nine months.I joined SAIT to complete my education which was left behind in India.Although I am getting back to education after a very long gap, I have been surviving well and getting adjusted to the Canadian education system.I enjoy coding just the front end part, but of all, my best interest has been learning Linux, Powershell, and Python streaming towards automation.I have certainly made some great friends at SAIT. I am people-oriented, and I believe the best way to learn is from people, and SAIT is definitely the right place.</td>
         </tr>
 		<tr>
             <td><img src="images/mn.jpg" class="mn"></td>
