--- a/faqandabout.html
+++ b/faqandabout.html
@@ -122,7 +122,7 @@ function closeNav() {
         </tr>
         <tr>
             <td><img src="images/nk.jpg" class="nk"></td>
-            <td>Nkoula </td>
+            <td>Hello My name is Nkoula Al Richan, I was born in Syria and I moved to Calgary in December 2015. I am a second year Computer System student at SAIT.</td>
         </tr>
 		<tr>
             <td><img src="images/rangaa.jpg" class="ranga"></td>
