--- a/faqandabout.html
+++ b/faqandabout.html
@@ -130,7 +130,7 @@ function closeNav() {
         </tr>
 		<tr>
             <td><img src="images/mn.jpg" class="mn"></td>
-            <td></td>
+            <td>My names Muhammad Numan. I love to travel around the world, I've visited a few places myself and have experienced the beauty of the Botanic Gardens in Singapore that houses over 1000 species and 2000 hybrids or flowers. I also, enjoy visiting new places for food and experiencing the culture.</td>
 		</tr>
     </tbody>
 </table>
